2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCcse.c,
	  src/SDCCicode.c,
	  src/SDCCicode.h,
	  src/SDCClrange.c,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/ds390/ralloc.c,
	  src/mcs51/ralloc.c,
	  src/pic14/glue.c,
	  src/pic14/ralloc.c,
	  src/pic16/glue.c,
	  src/pic16/ralloc.c,
	  src/stm8/gen.c,
	  src/z80/ralloc.c:
	  struct / union return support for stm8.

2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* device/include/assert.h:
	  Improve test for assert C23-compliance.

2022-03-15 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  genPlusInc(), genMinusDec() and genlshTwo() improvements.
	  
2022-03-14 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/z80/main.c,
	  src/z80/gen.c:
	  Enable _BitInt for sm83 up to 64 bits.
	* device/include/assert.h,
	  support/regression/tests/assert.c:
	  C23-compliant assert, RFE #780.

2022-03-14 Gabriele Gorla <gorlik@yahoo.com>

	* support/regression/tests/gcc-torture-execute-20021120-1.c:
	  Make stack-auto exception only for mos6502 port. Enable test for S08 and HC08.

2022-03-14 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* support/regression/tests/bitintarith.c:
	  Disable part of test for pdk14 to not run out of code memory.
	* src/z80/gen.c,
	  support/regression/tests/bitintbitfield.c,
	  support/regression/tests/widebitintbitfield.c:
	  Fix write to wide bit-field on z80.

2022-03-14 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCval.c:
	  Use unsigned long long to represent bit-field values at compile time.
	* src/mcs51/main.c:
	  Enable _BitInt for mcs51.
	* support/regression/tests/bitintarith.c,
	  support/regression/tests/bug-3355.c:
	  Test for bug #3355 (disabled for now).
	* src/ds390/main.c,
	  src/ds390/gen.c:
	  _BitInt for ds390.
	* src/z80/gen.c,
	  support/regression/tests/bitintarith.c:
	  Fix a z80 _BitInt decrement issue.
